--- a/src/camera/package.xml
+++ b/src/camera/package.xml
@@ -12,6 +12,9 @@
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
 
+  <exec_depend>pose_interfaces</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
